fixing the container left

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             position: fixed; /* Change from absolute to fixed */
             bottom: 10%; /* Adjust distance from bottom as needed */
             left: 50%;
+            right: 50%;
             transform: translateX(-50%); /* Horizontal centering */
             z-index: 999;
             margin-bottom: 10px;
@@ -125,6 +126,7 @@
             border-radius: 8px;
             margin-right: 10px;
             margin-bottom: 10px;
+            margin-left: 10px;
             box-sizing: border-box;
             font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
         }
