--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@
             border-radius: 10px; /* Add rounded corners */
             position: fixed; /* Change from absolute to fixed */
             bottom: 10%; /* Adjust distance from bottom as needed */
-            left: 50%;
-            right: 50%;
             transform: translateX(-50%); /* Horizontal centering */
             z-index: 999;
-            margin-bottom: 10px;
-            max-width: 600px; /* Set a maximum width for the form container */
-            width: 90%; /* Set a width for the form container */
+            margin-bottom: 10%;
+            max-width: 500px; /* Set a maximum width for the form container */
+            width: 70%; /* Set a width for the form container */
         }
 
         /* Additional styles for the form */
