Code simple for TikTok

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            overflow: hidden; /* Prevent scrolling */
-            background-color: #000; /* Black background color */
+            overflow: hidden;
+            background-color: #000;
         }
 
         header {
@@ -19,7 +19,7 @@
             color: #fff;
             text-align: center;
             padding: 5px;
-            height: 50px; /* Adjust the height as needed */
+            height: 50px;
             position: fixed;
             top: 0;
             width: 100%;
@@ -36,13 +36,6 @@
             margin-top: 10px;
         }
 
-        header #logo {
-            width: 400px; /* Adjust the width as needed */
-            height: auto;
-            margin-right: 80px;
-            margin-top: 270px;
-        }
-
         #image-background {
             position: fixed;
             top: 49;
@@ -51,70 +44,63 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: top; /* Mantiene la parte superior de la imagen visible */
-            z-index: -1; /* Place the image behind other elements */
+            object-position: top;
+            z-index: -1;
         }
 
-
-        /* Additional styles for the form container */
         #form-container {
-            background-color: #000; /* Black background color */
-            padding: 20px; /* Add padding to the container */
-            border-radius: 10px; /* Add rounded corners */
-            position: fixed; /* Change from absolute to fixed */
-            bottom: 10%; /* Adjust distance from bottom as needed */
-            transform: translateX(-50%); /* Horizontal centering */
+            background-color: #000;
+            padding: 20px;
+            border-radius: 10px;
+            position: fixed;
+            bottom: 10%;
+            transform: translateX(-50%);
             z-index: 999;
             margin-bottom: 10%;
-            max-width: 500px; /* Set a maximum width for the form container */
-            width: 70%; /* Set a width for the form container */
+            max-width: 500px;
+            width: 70%;
         }
 
-        /* Additional styles for the form */
         form {
             text-align: center;
             color: #fff;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
-            font-size: 20px; /* Font size 20px */
+            font-family: 'Teko', sans-serif;
+            font-size: 20px;
             font-weight: 100;
             letter-spacing: 1px;
         }
 
         input[type="email"] {
             padding: 8px;
-            width: 350px;
+            width: 100%;
             font-size: 22px;
             border: 1px solid #ccc;
             border-radius: 8px;
-            margin-right: 10px;
             margin-bottom: 10px;
-            margin-left: 10px;
             box-sizing: border-box;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
+            font-family: 'Teko', sans-serif;
         }
 
         button {
             padding: 8px 40px;
             border-radius: 8px;
             font-size: 22px;
-            background-color: #fffc00; /* Vivid yellow */
+            background-color: #fffc00;
             color: #201829;
             border: none;
             cursor: pointer;
             transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
+            font-family: 'Teko', sans-serif;
         }
 
         button:hover {
-            background-color: #FF8C00; /* Darker shade on hover */
+            background-color: #FF8C00;
         }
 
         #thankYouMessage {
             display: none;
             margin-top: 10px;
         }
-
-        
     </style>
 </head>
 <body>
@@ -122,14 +108,11 @@
     <header>
         <div>
             <img src="img/menu.png" alt="Menu Icon">
-            <!-- Use "img/menu.png" for the small icon image -->
         </div>
     </header>
 
-    <!-- Image background -->
     <img id="image-background" src="img/background-image.jpg" alt="Background Image">
 
-    <!-- Formulario de registro -->
     <div id="form-container">
         <form id="registrationForm">
             <h2>Stay tuned with the latest news & updates</h2>
@@ -142,7 +125,6 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             var image = document.getElementById('image-background');
-            // You can adjust the source and alt text accordingly
             image.src = "img/background-image.jpg";
             image.alt = "Background Image Alt Text";
         });
