--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             padding: 20px;
             border-radius: 10px;
             position: fixed;
-            bottom: 10%;
-            transform: translateX(-50%);
+            bottom: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             z-index: 999;
-            margin-bottom: 10%;
             max-width: 500px;
             width: 70%;
+            min-height: 100px; /* Establece un mínimo de píxeles para el contenedor del formulario */
         }
 
         form {
