--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
         }
 
         header {
-            background-color: #000;
-            color: #fff;
             text-align: center;
             padding: 5px;
             height: 50px;
@@ -38,7 +36,7 @@
 
         #image-background {
             position: fixed;
-            top: 49;
+            top: 0;
             left: 0;
             bottom: auto;
             width: 100%;
@@ -55,18 +53,19 @@
             position: fixed;
             bottom: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -20%);
             z-index: 999;
             max-width: 500px;
             width: 70%;
-            min-height: 100px; /* Establece un mínimo de píxeles para el contenedor del formulario */
+            min-height: 300px; /* Establece un mínimo de píxeles para el contenedor del formulario */
         }
 
         form {
             text-align: center;
             color: #fff;
             font-family: 'Teko', sans-serif;
-            font-size: 20px;
+            font-size: max(20px, 2vmin); /* Tamaño mínimo para el texto */
+            font-weight: 100;
             font-weight: 100;
             letter-spacing: 1px;
         }
