--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
             padding: 20px;
             border-radius: 10px;
             position: fixed;
-            bottom: 20%;
+            bottom: 8%;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 999;
             max-width: 500px;
+            min-width: 400;
             width: 70%;
-            min-height: 300px; /* Establece un mínimo de píxeles para el contenedor del formulario */
+            min-height: 200px; /* Establece un mínimo de píxeles para el contenedor del formulario */
         }
 
         form {
