--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             position: fixed;
             bottom: 8%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, 0); /* Solo translada verticalmente */
             z-index: 999;
             max-width: 500px;
             min-width: 40;
