--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             padding: 40px;
             border-radius: 10px;
             position: fixed;
-            bottom: 8%;
+            bottom: 0;
             left: 50%;
             transform: translate(-50%, 0); /* Solo translada verticalmente */
             z-index: 999;
