--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         }
 
         #form-container {
-            background-color: #000;
+            background-color: #563ae3;
             padding: 40px;
             border-radius: 10px;
             position: fixed;
