--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         #form-container {
             background-color: #000;
-            padding: 40px;
+            padding: 100px;
             border-radius: 10px;
             position: fixed;
             bottom: 8%;
@@ -56,7 +56,7 @@
             transform: translate(-50%, 0); /* Solo translada verticalmente */
             z-index: 999;
             max-width: 500px;
-            min-width: 40;
+            min-width: 80px;
             width: 70%;
             min-height: 200px; /* Establece un mínimo de píxeles para el contenedor del formulario */
         }
@@ -65,16 +65,16 @@
             text-align: center;
             color: #fff;
             font-family: 'Teko', sans-serif;
-            font-size: max(20px, 2vmin); /* Tamaño mínimo para el texto */
+            font-size: max(32px, 2vmin); /* Tamaño mínimo para el texto */
             font-weight: 100;
             font-weight: 100;
             letter-spacing: 1px;
         }
 
         input[type="email"] {
-            padding: 8px;
+            padding: 20px;
             width: 100%;
-            font-size: 22px;
+            font-size: 32px;
             border: 1px solid #ccc;
             border-radius: 8px;
             margin-bottom: 10px;
@@ -83,9 +83,9 @@
         }
 
         button {
-            padding: 8px 40px;
+            padding: 20px 80px;
             border-radius: 8px;
-            font-size: 22px;
+            font-size: 32px;
             background-color: #fffc00;
             color: #201829;
             border: none;
