--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
         #form-container {
             background-color: #000;
-            padding: 100px;
+            padding: 10%;
             border-radius: 10px;
             position: fixed;
             bottom: 8%;
             left: 50%;
             transform: translate(-50%, 0);
             z-index: 999;
-            max-width: 500px;
-            min-width: 80px;
+            max-width: 80%;
+            min-width: 60%;
             width: 70%;
-            min-height: 200px;
+            min-height: 15%;
             /* Ajuste dinámico del tamaño del formulario */
             width: calc(70% * 6);
         }
