--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             border-radius: 10px;
             position: fixed;
             bottom: 8%;
+            top: 70%;
             left: 50%;
             transform: translate(-50%, 0);
             z-index: 999;
@@ -74,7 +75,7 @@
         }
 
         input[type="email"] {
-            padding: 20px;
+            padding: 10%;
             width: 100%;
             font-size: 32px;
             border: 1px solid #ccc;
