--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
             padding: 10%;
             border-radius: 10px;
             position: fixed;
-            bottom: 8%;
-            top: 70%;
+            bottom: 10%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, 0);
             z-index: 999;
             max-width: 80%;
             min-width: 60%;
             width: 70%;
-            min-height: 15%;
+            min-height: 5%;
             /* Ajuste dinámico del tamaño del formulario */
-            width: calc(70% * 6);
+           /* width: calc(70% * 6); */
         }
 
         form {
