--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
             padding: 100px;
             border-radius: 10px;
             position: fixed;
-            bottom: 8%;
+            bottom: 50%;
             left: 50%;
-            transform: translate(-50%, 0);
+            transform: translate(-50%, 50%);
             z-index: 999;
             max-width: 500px;
             min-width: 80px;
             width: 70%;
             min-height: 200px;
+            box-sizing: border-box; /* Añadido para que el padding no afecte al tamaño total */
         }
 
         form {
