--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            overflow: hidden;
-            background-color: #000;
+            overflow: hidden; /* Prevent scrolling */
+            background-color: #000; /* Black background color */
         }
 
         header {
+            background-color: #000;
+            color: #fff;
             text-align: center;
             padding: 5px;
-            height: 50px;
+            height: 50px; /* Adjust the height as needed */
             position: fixed;
             top: 0;
             width: 100%;
@@ -34,75 +36,123 @@
             margin-top: 10px;
         }
 
+        header #logo {
+            width: 400px; /* Adjust the width as needed */
+            height: auto;
+            margin-right: 80px;
+            margin-top: 270px;
+        }
+
         #image-background {
             position: fixed;
-            top: 0;
+            top: 49;
             left: 0;
             bottom: auto;
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: top;
-            z-index: -1;
+            object-position: top; /* Mantiene la parte superior de la imagen visible */
+            z-index: -1; /* Place the image behind other elements */
         }
 
+        /* Responsive styles for mobile */
+        @media (max-width: 767px) {
+            header {
+                height: 40px; /* Adjust the height for mobile */
+            }
+
+            header img {
+                width: 20px; /* Adjust the size for mobile */
+                margin-left: 10px;
+                margin-top: 5px;
+            }
+
+            header #logo {
+                width: 30px; /* Adjust the width for mobile */
+                margin-right: 10px;
+            }
+
+            #form-container {
+                bottom: 10%; /* Adjust the distance from the bottom for mobile */
+                left: 30%;
+                right: 30%;
+            }
+
+            input[type="email"] {
+                width: 100%; /* Adjust the width to 100% for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+                margin-right: 10%; /* Remove right margin for mobile */
+                margin-bottom: 10px; /* Add bottom margin for mobile */
+                margin-left: 10%;
+            }
+
+            button {
+                padding: 8px 20px; /* Adjust padding for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+            }
+        }
+
+        /* Additional styles for the form container */
         #form-container {
-            background-color: #000;
-            padding: 100px;
-            border-radius: 10px;
-            position: fixed;
-            bottom: 50%;
+            background-color: #000; /* Black background color */
+            padding: 20px; /* Add padding to the container */
+            border-radius: 10px; /* Add rounded corners */
+            position: fixed; /* Change from absolute to fixed */
+            bottom: 10%; /* Adjust distance from bottom as needed */
             left: 50%;
-            transform: translate(-50%, 50%);
+            right: 50%;
+            transform: translateX(-50%); /* Horizontal centering */
             z-index: 999;
-            max-width: 500px;
-            min-width: 80px;
-            width: 70%;
-            min-height: 200px;
-            box-sizing: border-box; /* Añadido para que el padding no afecte al tamaño total */
+            margin-bottom: 10px;
+            max-width: 600px; /* Set a maximum width for the form container */
+            width: 90%; /* Set a width for the form container */
         }
 
+        /* Additional styles for the form */
         form {
             text-align: center;
             color: #fff;
-            font-family: 'Teko', sans-serif;
-            font-size: max(32px, 2vmin);
-            font-weight: 100;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
+            font-size: 20px; /* Font size 20px */
             font-weight: 100;
             letter-spacing: 1px;
         }
 
         input[type="email"] {
-            padding: 20px;
-            width: 100%;
-            font-size: 32px;
+            padding: 8px;
+            width: 350px;
+            font-size: 22px;
             border: 1px solid #ccc;
             border-radius: 8px;
+            margin-right: 10px;
             margin-bottom: 10px;
+            margin-left: 10px;
             box-sizing: border-box;
-            font-family: 'Teko', sans-serif;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
         }
 
         button {
-            padding: 20px 80px;
+            padding: 8px 40px;
             border-radius: 8px;
-            font-size: 32px;
-            background-color: #fffc00;
+            font-size: 22px;
+            background-color: #fffc00; /* Vivid yellow */
             color: #201829;
             border: none;
             cursor: pointer;
             transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
         }
 
         button:hover {
-            background-color: #FF8C00;
+            background-color: #FF8C00; /* Darker shade on hover */
         }
 
         #thankYouMessage {
             display: none;
             margin-top: 10px;
         }
+
+        
     </style>
 </head>
 <body>
@@ -110,16 +160,19 @@
     <header>
         <div>
             <img src="img/menu.png" alt="Menu Icon">
+            <!-- Use "img/menu.png" for the small icon image -->
         </div>
     </header>
 
+    <!-- Image background -->
     <img id="image-background" src="img/background-image.jpg" alt="Background Image">
 
+    <!-- Formulario de registro -->
     <div id="form-container">
-        <form id="registrationForm" action="https://registration.gameosaur.com/" method="post">
+        <form id="registrationForm">
             <h2>Stay tuned with the latest news & updates</h2>
-            <input type="email" id="emailInput" name="email" placeholder="Email Address" required>
-            <button type="submit">SEND</button>
+            <input type="email" id="emailInput" placeholder="Email Address" required>
+            <button type="button" onclick="registerEmail()">SEND</button>
             <p id="thankYouMessage">Thank you!</p>
         </form>
     </div>
@@ -127,6 +180,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             var image = document.getElementById('image-background');
+            // You can adjust the source and alt text accordingly
             image.src = "img/background-image.jpg";
             image.alt = "Background Image Alt Text";
         });
