--- a/index.html
+++ b/index.html
@@ -1,188 +1,271 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+	<title>Coming Soon - Free Under Construction Website Template with Countdown</title>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Company</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            overflow: hidden; /* Prevent scrolling */
-            background-color: #000; /* Black background color */
-        }
-
-        header {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 5px;
-            height: 50px; /* Adjust the height as needed */
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        header img {
-            width: 30px;
-            height: auto;
-            margin-left: 20px;
-            margin-top: 10px;
-        }
-
-        header #logo {
-            width: 400px; /* Adjust the width as needed */
-            height: auto;
-            margin-right: 80px;
-            margin-top: 270px;
-        }
-
-        #image-background {
-            position: fixed;
-            top: 49;
-            left: 0;
-            bottom: auto;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: top; /* Mantiene la parte superior de la imagen visible */
-            z-index: -1; /* Place the image behind other elements */
-        }
-
-        /* Responsive styles for mobile */
-        @media (max-width: 767px) {
-            header {
-                height: 40px; /* Adjust the height for mobile */
-            }
-
-            header img {
-                width: 20px; /* Adjust the size for mobile */
-                margin-left: 10px;
-                margin-top: 5px;
-            }
-
-            header #logo {
-                width: 30px; /* Adjust the width for mobile */
-                margin-right: 10px;
-            }
-
-            #form-container {
-                bottom: 10%; /* Adjust the distance from the bottom for mobile */
-                left: 30%;
-                right: 30%;
-            }
-
-            input[type="email"] {
-                width: 100%; /* Adjust the width to 100% for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-                margin-right: 10%; /* Remove right margin for mobile */
-                margin-bottom: 10px; /* Add bottom margin for mobile */
-                margin-left: 10%;
-            }
-
-            button {
-                padding: 8px 20px; /* Adjust padding for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-            }
-        }
-
-        /* Additional styles for the form container */
-        #form-container {
-            background-color: #000; /* Black background color */
-            padding: 20px; /* Add padding to the container */
-            border-radius: 10px; /* Add rounded corners */
-            position: fixed; /* Change from absolute to fixed */
-            bottom: 10%; /* Adjust distance from bottom as needed */
-            left: 50%;
-            right: 50%;
-            transform: translateX(-50%); /* Horizontal centering */
-            z-index: 999;
-            margin-bottom: 10px;
-            max-width: 600px; /* Set a maximum width for the form container */
-            width: 90%; /* Set a width for the form container */
-        }
-
-        /* Additional styles for the form */
-        form {
-            text-align: center;
-            color: #fff;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
-            font-size: 20px; /* Font size 20px */
-            font-weight: 100;
-            letter-spacing: 1px;
-        }
-
-        input[type="email"] {
-            padding: 8px;
-            width: 350px;
-            font-size: 22px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            margin-right: 10px;
-            margin-bottom: 10px;
-            margin-left: 10px;
-            box-sizing: border-box;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
-        }
-
-        button {
-            padding: 8px 40px;
-            border-radius: 8px;
-            font-size: 22px;
-            background-color: #fffc00; /* Vivid yellow */
-            color: #201829;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
-        }
-
-        button:hover {
-            background-color: #FF8C00; /* Darker shade on hover */
-        }
-
-        #thankYouMessage {
-            display: none;
-            margin-top: 10px;
-        }
-
-        
-    </style>
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="author" content="TemplatesJungle">
+    <meta name="keywords" content="Coming soon, under Construction">
+    <meta name="description" content="Coming Soon - Free Under Construction Website Template with Countdown">
+    <link rel="stylesheet" type="text/css" href="fonts/icomoon.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
+
+<style type="text/css">
+
+body {
+	font-family: "Roboto", sans-seriff;
+    color: #fff;
+    margin: 0;
+	background: url(images/bg.jpg) no-repeat;
+}
+a, button {
+	transition: 0.3s all ease-out;
+}
+a {
+	color: #fff;
+	text-decoration: none;
+}
+a:hover {
+	color: #fff;
+}
+textarea:focus, input:focus {
+	outline: none;
+}
+#body-wrap {
+	padding: 100px 20px;
+}
+.container {
+    margin: 50px auto;
+    width: 100%;
+    text-align: center;
+}
+header#header {
+    margin-bottom: 120px;
+}
+.main-content h1 {
+    font-size: 3em;
+    font-weight: 800;
+    margin-bottom: 0;        
+}
+#countdown-clock{
+	font-size: 30px;
+	display: flex;
+	justify-content: center;
+	margin: 50px;
+}
+#countdown-clock > .time{
+	background: rgba(137,137,137,0.3);
+	border-radius: 10px;
+	padding: 20px;
+	margin-right: 10px;
+}
+#countdown-clock .time > span{
+	font-weight: 700;
+}
+#countdown-clock .time small{
+	padding-top: 5px;
+	font-size: 12px;
+	text-transform: uppercase;
+    display: block;
+}
+.main-content p {
+    font-size: 1em;
+    margin: 0;
+    color: #aaa;
+}
+#form .form-group {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+input::placeholder{
+   color: #949393;
+}
+.form-group input.form-control {
+    width: 250px;
+    height: 50px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding-left: 20px;
+    border: none;
+}
+.form-group button.submit-button {
+    padding: 18px 30px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: #0043ee;
+    border: none;
+	cursor: pointer;
+    color: #fff;
+}
+.form-group button.submit-button:hover {
+    background-color: #222630;
+}
+.form-group button.submit-button span {
+    font-weight: 700;
+    padding-left: 5px;
+}
+#footer .social-links {
+    padding-top: 20px;
+}
+#footer .social-links ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+#footer .social-links li {
+    padding-right: 20px;
+}
+#footer .social-links ul a {
+    font-size: 1.6em;
+    text-decoration: none;
+}
+.copyright {
+	color: #aaa;
+}
+
+@media (max-width: 768px) {
+	header#header {
+	    margin-bottom: 50px;
+	}
+	#body-wrap {
+		padding: 0px 20px;
+	}
+	#countdown-clock > .time {
+		padding: 14px;
+	}
+	.form-group button.submit-button {
+	    width: 140px;
+        padding: 18px 9px;
+	}
+ }
+
+</style>
+
 <body>
+	
+	<div id="body-wrap">
+		<div class="container">
 
-    <header>
-        <div>
-            <img src="img/menu.png" alt="Menu Icon">
-            <!-- Use "img/menu.png" for the small icon image -->
-        </div>
-    </header>
+			<header id="header">
+				<div class="logo">
+					<img src="images/logo.png" alt="logo">
+				</div>	
+			</header>
 
-    <!-- Image background -->
-    <img id="image-background" src="img/background-image.jpg" alt="Background Image">
+			<div class="main-content light">
 
-    <!-- Formulario de registro -->
-    <div id="form-container">
-        <form id="registrationForm" action="https://registration.gameosaur.com/" method="post">
-            <h2>Stay tuned with the latest news & updates</h2>
-            <input type="email" id="emailInput" name="email" placeholder="Email Address" required>
-            <button type="submit">SEND</button>
-            <p id="thankYouMessage">Thank you!</p>
-        </form>
-    </div>
+				<div class="page-title">
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var image = document.getElementById('image-background');
-            image.src = "img/background-image.jpg";
-            image.alt = "Background Image Alt Text";
-        });
-    </script>
+					<h1>We are launching soon!</h1>
+
+					<div id="countdown-clock">
+						<div class="time">
+							<span class="days"></span>
+							<small>Days</small>
+						</div>
+						<div class="time">
+							<span class="hours"></span>
+							<small>Hours</small>
+						</div>
+						<div class="time">
+							<span class="minutes"></span>
+							<small>Minutes</small>
+						</div>
+						<div class="time">
+							<span class="seconds"></span>
+							<small>Seconds</small>
+						</div>
+					</div>
+
+				</div><!--page-title-->
+
+				<form id="form">
+
+					<p>Get notified when we launched our website</p>
+
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Your email address">
+						<button type="button" class="submit-button"><i class="icon icon-envelope"></i><span>NOTIFY ME</span></button>
+					</div>
+
+				</form>
+
+			</div><!--main-content-->
+
+			<footer id="footer" class="light">
+
+				<div class="social-links">
+					<ul>
+						<li><a href="#"><i class="icon icon-facebook"></i></a></li>
+						<li><a href="#"><i class="icon icon-github"></i></a></li>
+						<li><a href="#"><i class="icon icon-google-plus"></i></a></li>
+						<li><a href="#"><i class="icon icon-linkedin"></i></a></li>
+						<li><a href="#"><i class="icon icon-twitter"></i></a></li>
+					</ul>
+				</div><!--social-links-->
+
+				<div class="copyright">
+					<p>Copyright &copy; Free Website Template by <a href="https://templatesjungle.com" target="_blank">TemplatesJungle</a> 2023.</p>
+				</div>
+
+			</footer>
+
+		</div>
+	</div><!--body-wrap-->
+
+
+<script type="text/javascript">
+	function getTimeRemaining(endtime) {
+		const total = Date.parse(endtime) - Date.parse(new Date());
+		const seconds = Math.floor((total / 1000) % 60);
+		const minutes = Math.floor((total / 1000 / 60) % 60);
+		const hours = Math.floor((total / (1000 * 60 * 60)) % 24);
+		const days = Math.floor(total / (1000 * 60 * 60 * 24));
+
+	return {
+	total,
+	days,
+	hours,
+	minutes,
+	seconds
+	};
+	}
+
+	function initializeClock(id, endtime) {
+		const clock = document.getElementById(id);
+		const daysSpan = clock.querySelector('.days');
+		const hoursSpan = clock.querySelector('.hours');
+		const minutesSpan = clock.querySelector('.minutes');
+		const secondsSpan = clock.querySelector('.seconds');
+
+	function updateClock() {
+	const t = getTimeRemaining(endtime);
+
+	daysSpan.innerHTML = t.days;
+	hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+	minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+	secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+	if (t.total <= 0) {
+	  clearInterval(timeinterval);
+	}
+	}
+
+	updateClock();
+	const timeinterval = setInterval(updateClock, 1000);
+	}
+
+	const deadline = new Date(Date.parse(new Date()) + 28 * 24 * 60 * 60 * 1000);
+	initializeClock('countdown-clock', deadline);
+</script>
+
+
 </body>
 </html>
