--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@ input::placeholder{
 
 				<form id="form">
 
-					<p>Get notified when we launched our website</p>
+					<p>Stay tuned with the latest news & updates</p>
 
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Your email address">
-						<button type="button" class="submit-button"><i class="icon icon-envelope"></i><span>NOTIFY ME</span></button>
+						<button type="button" class="submit-button"><i class="icon icon-envelope"></i><span>SIGN UP</span></button>
 					</div>
 
 				</form>
@@ -201,14 +201,14 @@ input::placeholder{
 
 			<footer id="footer" class="light">
 
-				<div class="social-links">
+				<!--<div class="social-links">
 					<ul>
 						<li><a href="#"><i class="icon icon-facebook"></i></a></li>
 						<li><a href="#"><i class="icon icon-github"></i></a></li>
 						<li><a href="#"><i class="icon icon-google-plus"></i></a></li>
 						<li><a href="#"><i class="icon icon-linkedin"></i></a></li>
 						<li><a href="#"><i class="icon icon-twitter"></i></a></li>
-					</ul>
+					</ul>-->
 				</div><!--social-links-->
 
 				<div class="copyright">
@@ -221,7 +221,7 @@ input::placeholder{
 	</div><!--body-wrap-->
 
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	function getTimeRemaining(endtime) {
 		const total = Date.parse(endtime) - Date.parse(new Date());
 		const seconds = Math.floor((total / 1000) % 60);
@@ -264,7 +264,7 @@ input::placeholder{
 
 	const deadline = new Date(Date.parse(new Date()) + 28 * 24 * 60 * 60 * 1000);
 	initializeClock('countdown-clock', deadline);
-</script>
+</script>-->
 
 
 </body>
