removing timer visual

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ input::placeholder{
 
 					<h1>We are launching soon!</h1>
 
-					<div id="countdown-clock">
+					<!--<div id="countdown-clock">
 						<div class="time">
 							<span class="days"></span>
 							<small>Days</small>
@@ -182,7 +182,7 @@ input::placeholder{
 							<span class="seconds"></span>
 							<small>Seconds</small>
 						</div>
-					</div>
+					</div>-->
 
 				</div><!--page-title-->
 
