--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 
         #signup-container {
             text-align: center;
-            padding: 20px;
+            padding: 24px; /* Aumentado en un 20% */
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
-            max-width: 400px; /* Máximo ancho del formulario */
+            max-width: 480px; /* Aumentado en un 20% */
             margin: 10px; /* Espaciado alrededor del formulario */
             box-sizing: border-box;
         }
 
         input[type="text"] {
-            padding: 10px;
+            padding: 12px; /* Aumentado en un 20% */
             width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
-            margin-bottom: 10px;
+            margin-bottom: 12px; /* Aumentado en un 20% */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
+            font-size: 16px; /* Aumentado en un 20% */
         }
 
         button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 24px; /* Aumentado en un 20% */
+            font-size: 19.2px; /* Aumentado en un 20% */
             background-color: #4caf50;
             color: #fff;
             border: none;
@@ -54,7 +55,7 @@
 <body>
 
     <div id="signup-container">
-        <h2>Sign Up</h2>
+        <h2 style="font-size: 24px;">Sign Up</h2> <!-- Aumentado en un 20% -->
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
