--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         }
 
         button {
-            padding: 16.8px 33.6px; /* Aumentado en un 40% (20% + 20%) */
+            width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
+            padding: 16.8px; /* Aumentado en un 40% (20% + 20%) */
             font-size: 26.88px; /* Aumentado en un 40% (20% + 20%) */
             background-color: #4caf50;
             color: #fff;
