--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Teko', sans-serif;
             background-color: #f4f4f4;
             display: flex;
             align-items: center;
@@ -35,28 +36,30 @@
             border-radius: 4px;
             box-sizing: border-box;
             font-size: 22.4px; /* Aumentado en un 40% (20% + 20%) */
+            font-weight: 600; /* Cambiado a Teko Semibold */
         }
 
         button {
             width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
             padding: 16.8px; /* Aumentado en un 40% (20% + 20%) */
             font-size: 26.88px; /* Aumentado en un 40% (20% + 20%) */
-            background-color: #4caf50;
-            color: #fff;
+            background-color: #ff6f2c;
+            color: #140f22;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            font-weight: 600; /* Cambiado a Teko Semibold */
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #ffcc00;
         }
     </style>
 </head>
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 28.8px;">Sign Up</h2> <!-- Aumentado en un 40% (20% + 20%) -->
+        <h2 style="font-size: 28.8px; font-weight: 600;">Sign Up</h2> <!-- Aumentado en un 40% (20% + 20%) -->
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
