--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         #signup-container {
             text-align: center;
             padding: 33.6px; /* Aumentado en un 40% (20% + 20%) */
-            background-color: #fff;
+            background-color: #26213d; /* Cambiado a #26213d */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
@@ -37,14 +37,15 @@
             box-sizing: border-box;
             font-size: 22.4px; /* Aumentado en un 40% (20% + 20%) */
             font-weight: 600; /* Cambiado a Teko Semibold */
+            color: #fff; /* Cambiado a color blanco */
         }
 
         button {
             width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
             padding: 16.8px; /* Aumentado en un 40% (20% + 20%) */
             font-size: 26.88px; /* Aumentado en un 40% (20% + 20%) */
-            background-color: #ff6f2c;
-            color: #140f22;
+            background-color: #4caf50;
+            color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -52,14 +53,14 @@
         }
 
         button:hover {
-            background-color: #ffcc00;
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 28.8px; font-weight: 600;">Sign Up</h2> <!-- Aumentado en un 40% (20% + 20%) -->
+        <h2 style="font-size: 28.8px; font-weight: 600; color: #fff;">Sign Up</h2> <!-- Aumentado en un 40% (20% + 20%) -->
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
