--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-weight: 600; /* Cambiado a Teko Semibold */
+            font-family: 'Teko', sans-serif; /* Cambiado a la fuente Teko */
         }
 
         button:hover {
