--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Teko', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #2f2d38; /* Cambiado a #2f2d38 */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -18,38 +18,38 @@
 
         #signup-container {
             text-align: center;
-            padding: 33.6px; /* Aumentado en un 40% (20% + 20%) */
-            background-color: #26213d; /* Cambiado a #26213d */
+            padding: 33.6px;
+            background-color: #26213d;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
-            max-width: 672px; /* Aumentado en un 40% (20% + 20%) */
-            margin: 10px; /* Espaciado alrededor del formulario */
+            width: calc(100% - 20px);
+            max-width: 672px;
+            margin: 10px;
             box-sizing: border-box;
         }
 
         input[type="text"] {
-            padding: 16.8px; /* Aumentado en un 40% (20% + 20%) */
-            width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
-            margin-bottom: 16.8px; /* Aumentado en un 40% (20% + 20%) */
+            padding: 16.8px;
+            width: calc(100% - 20px);
+            margin-bottom: 16.8px;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 22.4px; /* Aumentado en un 40% (20% + 20%) */
-            font-weight: 600; /* Cambiado a Teko Semibold */
-            color: #fff; /* Cambiado a color blanco */
+            font-size: 22.4px;
+            font-weight: 600;
+            color: #fff;
         }
 
         button {
-            width: calc(100% - 20px); /* Ajuste para mantener 10px de distancia a cada lado */
-            padding: 16.8px; /* Aumentado en un 40% (20% + 20%) */
-            font-size: 26.88px; /* Aumentado en un 40% (20% + 20%) */
+            width: calc(100% - 20px);
+            padding: 16.8px;
+            font-size: 26.88px;
             background-color: #4caf50;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-family: 'Teko', sans-serif; /* Cambiado a la fuente Teko */
+            font-family: 'Teko', sans-serif;
         }
 
         button:hover {
@@ -60,7 +60,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 28.8px; font-weight: 600; color: #fff;">Sign Up</h2> <!-- Aumentado en un 40% (20% + 20%) -->
+        <h2 style="font-size: 28.8px; font-weight: 600; color: #fff;">Sign Up</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
