--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <style>
         body {
             font-family: 'Teko', sans-serif;
-            background-color: #2f2d38; /* Cambiado a #2f2d38 */
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
+            background-image: url('Img/OverImage.png');
+            background-size: cover;
+            background-position: center;
         }
 
         #signup-container {
